--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,1 +1,11 @@
-Welcome to html dir!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Welcome to bagman!</title>
+        <meta charset="utf-8"/>
+        <script src="js/bagman.js"></script>
+    </head>
+    <body>
+        <h1>Welcome to Bagman!</h1>
+    </body>
+</html>
