* parcel * descr-resize

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to bagman!</title>
+        <title>Welcome to bagman root!</title>
         <meta charset="utf-8"/>
         <script src="js/bagman.js" type="module"></script>
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
         <h1>Welcome to Bagman!</h1>
