--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <h1>Welcome to Bagman!</h1>
+        <h1>LOAD-nft Roadmap</h1>
     </body>
 </html>
