--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <title>Welcome to bagman root!</title>
         <meta charset="utf-8"/>
         <script src="js/bagman.js" type="module"></script>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/style.scss" />
     </head>
     <body>
     </body>
